--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "volta": {
+    "node": "18.12.1",
+    "npm": "9.1.1",
+    "yarn": "1.22.19"
   }
 }
